UPDATE MAP change highway value of Ngo Ha Hoi from "service" to "residential"

--- a/data/map2.html
+++ b/data/map2.html
@@ -66,7 +66,7 @@
                         return(res.json())
                     }
                     else{
-                        throw new Error("Can't find a path")
+                        alert("Fail to find the shortest path")
                     }
                 })
                 .then((array) => {
